# url-imageview

./: .gitignore  package.json  tsconfig.json  tslint.json  webpack.common.js  webpack.dev.js  webpack.prod.js
public/: index.html
server/: pyproject.toml
server/dev/: patho_outline.py
server/url_imageview/: __init__.py  api.py  db.py  util.py
src/: declaration.d.ts  index.css  index.ts  urlList.txt
src/templates/: container.html  editor.html
src/views/: Editor.ts  Viewer.ts
